# EzyTutor

./: .env.example  .gitignore  Cargo.toml  README.md  test_api.sh  test_simple.sh
migrations/: 001_initial_schema.sql
src/: config.rs  database.rs  errors.rs  main.rs  middleware.rs
src/handlers/: auth.rs  course.rs  health.rs  mod.rs  tutor.rs
src/models/: mod.rs
src/services/: auth.rs  course.rs  mod.rs  tutor.rs
